--- a/src/app/core/style/style.scss
+++ b/src/app/core/style/style.scss
@@ -1,7 +1,1 @@
-$colorMainColor: black;
-$colorAccent: #caa500;
-$colorSecondaryColor: #2e2e2e;
-
-.menuBar {
-  background-color: $colorMainColor;
-}
+@import "./menu";
