--- a/src/app/core/style/applicationWindow.scss
+++ b/src/app/core/style/applicationWindow.scss
@@ -1,10 +1,8 @@
 .applicationWindow {
-  padding: 10px 30px 10px 30px;
-  background-color: $colorSecondaryColor;
   float: right;
-  width: 75%;
+  width: 99%;
   margin-right: 0;
-  height: 87.2vh;
+  height: $maxWindowHeight;
   border: solid;
   display: inline-block;
 }
