--- a/src/app/core/style/menu.scss
+++ b/src/app/core/style/menu.scss
@@ -1,12 +1,10 @@
-$colorSecondaryColor: red;
-
 .menuBar {
   background-color: inherit;
   float: left;
   border: solid;
   outline: none;
-  padding: 14px 16px;
+  height: 8vh;
   transition: 0.3s;
   font-size: 17px;
-  width: 97%;
+  width: 100%;
 }
