--- a/src/app/core/style/style.scss
+++ b/src/app/core/style/style.scss
@@ -1,7 +1,4 @@
+@import "./application.scss";
 @import "./menu";
 @import "./applicationBar.scss";
 @import "./applicationWindow.scss";
-.application {
-  display: inline-flex;
-  width: 100%;
-}
