--- a/src/app/core/style/menu.scss
+++ b/src/app/core/style/menu.scss
@@ -10,8 +10,7 @@
 .menubutton {
   -webkit-app-region: no-drag;
   height: 20px;
-  padding-right: 12px;
-  padding-top: 2px;
+  padding: 1px;
 }
 
 .menunav{
