--- a/src/app/core/style/menu.scss
+++ b/src/app/core/style/menu.scss
@@ -7,12 +7,6 @@
   -webkit-app-region: drag;
 }
 
-.menubutton {
-  -webkit-app-region: no-drag;
-  height: 20px;
-  padding: 1px;
-}
-
 .menunav{
   float: right;
   justify-Self: right,
@@ -24,7 +18,7 @@
   padding: 0;
 }
 
-.experiment{
+.menubutton{
   background-size:contain;
   height: 20px;
   width: 20px;
@@ -34,12 +28,12 @@
   cursor: pointer;
 }
 
-.experiment.Close{
+.menubutton.Close{
   background-image: url(../assets/close.png);
 }
-.experiment.Minimise{
+.menubutton.Minimise{
   background-image: url(../assets/minimise.png);
 }
-.experiment.Maximise{
+.menubutton.Maximise{
   background-image: url(../assets/maximise.png);
 }
