--- a/src/app/core/style/style.scss
+++ b/src/app/core/style/style.scss
@@ -2,6 +2,7 @@
 @import "./menu";
 @import "./applicationBar.scss";
 @import "./applicationWindow.scss";
+@import "./appIcons.scss";
 
 html{
     background-image: url(https://www.hastingsdirect.com/img/bg/clouds.png);
