--- a/src/app/core/style/applicationBar.scss
+++ b/src/app/core/style/applicationBar.scss
@@ -1,5 +1,5 @@
 .applicationBar {
-  width: 120px;
+  min-width: 110px;
   height: calc(100vh - 22px);
   resize: horizontal;
   display: inline-flex;
