--- a/src/app/core/style/applicationWindow.scss
+++ b/src/app/core/style/applicationWindow.scss
@@ -1,7 +1,7 @@
 .applicationWindow {
-  width: 99%;
+  width: 100%;
   margin-right: 0;
   height: calc(100vh - 22px);
-  background-color: rgba(64,64,64,0.8);
+  // background-color: rgba(64,64,64,0.8);
   display: inline-block;
 }
