--- a/src/app/core/style/menu.scss
+++ b/src/app/core/style/menu.scss
@@ -1,5 +1,5 @@
 .menuBar {
-  background-color: rgb(70, 70, 70);
+  background-color: $secondaryColour;
   height: 22px;
   font-size: 17px;
   width: $maxWindowWidth;
