--- a/src/app/core/style/applicationBar.scss
+++ b/src/app/core/style/applicationBar.scss
@@ -4,7 +4,7 @@
   resize: horizontal;
   display: inline-flex;
   flex-flow: column;
-  background-color: rgba(64, 64, 64, 0.5);
+  background-color: $tertiaryColour;
   text-align: center;
 }
 
