--- a/src/app/core/style/style.scss
+++ b/src/app/core/style/style.scss
@@ -3,10 +3,10 @@
 @import "./applicationBar.scss";
 @import "./applicationWindow.scss";
 
-html{
-    background-image: url(https://www.hastingsdirect.com/img/bg/clouds.png);
-    color: azure;
-    background-size:cover;
-    background-color: #5595ff;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+html {
+  background-image: url(https://www.hastingsdirect.com/img/bg/clouds.png);
+  color: $textColour;
+  background-size: cover;
+  background-color: $primaryColour;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
