--- a/src/app/core/style/application.scss
+++ b/src/app/core/style/application.scss
@@ -1,9 +1,9 @@
 $maxWindowHeight: 88vh;
 $maxWindowWidth: 100%;
-$primaryColour: #5595ff;
+$primaryColour: rgb(85, 149, 255);
 $secondaryColour: rgb(70, 70, 70);
 $tertiaryColour: rgba(64, 64, 64, 0.5);
-$textColour: white;
+$textColour: rgb(255, 255, 255);
 .application {
   display: inline-flex;
   width: $maxWindowWidth;
