--- a/src/app/core/style/applicationWindow.scss
+++ b/src/app/core/style/applicationWindow.scss
@@ -3,5 +3,6 @@
   margin-right: 0;
   height: calc(100vh - 22px);
   // background-color: rgba(64,64,64,0.8);
+  background-color: rgba(255, 255, 255, 0.2) !important;
   display: inline-block;
 }
