made application bar more hasings like

--- a/src/app/core/style/application.scss
+++ b/src/app/core/style/application.scss
@@ -2,7 +2,7 @@ $maxWindowHeight: 88vh;
 $maxWindowWidth: 100%;
 $primaryColour: rgb(85, 149, 255);
 $secondaryColour: rgb(70, 70, 70);
-$tertiaryColour: rgba(64, 64, 64, 0.5);
+$tertiaryColour: rgba(255, 255, 255, 0.55) !important;
 $textColour: rgb(255, 255, 255);
 .application {
   display: inline-flex;
