--- a/src/app/core/style/application.scss
+++ b/src/app/core/style/application.scss
@@ -2,8 +2,9 @@ $maxWindowHeight: 88vh;
 $maxWindowWidth: 100%;
 $primaryColour: rgb(85, 149, 255);
 $secondaryColour: rgb(179, 15, 9);
-$tertiaryColour: rgba(255, 255, 255, 0.55) !important;
+$tertiaryColour: rgba(255, 255, 255, 0.55);
 $textColour: rgb(255, 255, 255);
+
 .application {
   display: inline-flex;
   width: $maxWindowWidth;
