Refactored Menu item to be a button

--- a/src/app/core/style/menu.scss
+++ b/src/app/core/style/menu.scss
@@ -26,6 +26,10 @@
   -webkit-app-region: no-drag;
   cursor: pointer;
 }
+.menuItems {
+  float: right;
+  padding: 2px;
+}
 
 .menubutton.Close {
   background-image: url(../assets/close.png);
