--- a/src/app/core/style/applicationBar.scss
+++ b/src/app/core/style/applicationBar.scss
@@ -20,6 +20,7 @@
   background-size: contain;
   cursor: pointer;
   opacity: 0.7;
+  justify-content: flex-end;
 }
 
 .appButton:hover {
@@ -28,4 +29,18 @@
 
 .notify{
   display: flex;
+    height: 30px;
+    width: 30px;
+    align-self: flex-end;
+    font-size: 20px;
+    border: solid;
+    border-radius: 50%;
+    justify-content: center;
+    background-color: rgb(25, 132, 18);
+    flex-flow: column;
+    left: 10px;
+    position: relative;
+    top: 10px;
 }
+
+
