--- a/src/app/modules/ApplicationSelection/style/appIcon.scss
+++ b/src/app/modules/ApplicationSelection/style/appIcon.scss
@@ -1,3 +1,11 @@
 .ApplicationSelection{
     background-image: url(../assets/add.png);    
 }
+
+.Octane{
+    background-image: url(../../Example/assets/octaneIcon.png);    
+}
+
+.BatManager{
+    background-image: url(../../Example/assets/Bat.PNG);
+}
