--- a/src/app/modules/ApplicationSelection/style/applicationSelection.scss
+++ b/src/app/modules/ApplicationSelection/style/applicationSelection.scss
@@ -1,19 +1,29 @@
 .AppSelection{
     height: 100%;
-    display: flex;
-    justify-content: space-between;
 }
 
 .AppPane{
     flex: 1;
+    cursor: pointer;
+    border: solid;
+    height:300px;
+    width: 300px;
+    max-width: 30vh;
+    max-height: 30vh;
+    border-radius: 10%;
+    background-size: contain;
 }
 
 .AppSelection .AppPane{
     width: 30%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .ShowOnMouseOver{
     opacity: 0;
+    width: 100%;
+    height: 100%;
 }
 .ShowOnMouseOver:hover{
     opacity: 1;
