Bit more styling to app selection.

--- a/src/app/core/style/applicationWindow.scss
+++ b/src/app/core/style/applicationWindow.scss
@@ -4,5 +4,5 @@
   height: calc(100vh - 23px);
   // background-color: rgba(64,64,64,0.8);
   background-color: rgba(255, 255, 255, 0.2) !important;
-  display: flex;
+  display: inline-block;
 }
