--- a/src/app/core/style/applicationBar.scss
+++ b/src/app/core/style/applicationBar.scss
@@ -11,8 +11,10 @@
 
 .appButton {
   border-radius: 20%;
-  height: 90px;
-  width: 90px;
+  min-height: 85px;
+  height:85px;
+  min-width: 85px;
+  width: 85px;
   border: solid;
   display: flex;
   align-self: center;
@@ -23,6 +25,7 @@
   opacity: 0.7;
   justify-content: flex-end;
 }
+
 
 .appButton:hover {
   opacity: 1;
