--- a/src/app/core/style/style.scss
+++ b/src/app/core/style/style.scss
@@ -11,3 +11,23 @@
   background-color: $primaryColour;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+// Scrollbar
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
