--- a/src/app/modules/ApplicationSelection/style/appIcon.scss
+++ b/src/app/modules/ApplicationSelection/style/appIcon.scss
@@ -1,12 +1,12 @@
-.ApplicationSelection{
-    background-image: url(../assets/add.png);    
-    border: none;
+.ApplicationSelection {
+    background-image: url(../assets/add.png);
+    border: none !important;
 }
 
-.Octane{
-    background-image: url(../../Example/assets/octaneIcon.png);    
+.Octane {
+    background-image: url(../../Example/assets/octaneIcon.png);
 }
 
-.BatManager{
+.BatManager {
     background-image: url(../../Example/assets/Bat.PNG);
 }
