--- a/src/app/modules/ApplicationSelection/style/applicationSelection.scss
+++ b/src/app/modules/ApplicationSelection/style/applicationSelection.scss
@@ -1,13 +1,14 @@
-.AppSelection{
+.AppSelection {
     justify-content: space-evenly;
-    display:flex;
+    display: flex !important;
+    align-items: center;
 }
 
-.AppPane{
+.AppPane {
     flex: 1;
     cursor: pointer;
     border: solid;
-    height:300px;
+    height: 300px;
     width: 300px;
     max-width: 30vh;
     max-height: 30vh;
@@ -15,22 +16,23 @@
     background-size: contain;
 }
 
-.ShowOnMouseOver{
+.ShowOnMouseOver {
     opacity: 0;
     width: 100%;
     height: 100%;
 }
-.ShowOnMouseOver:hover{
+
+.ShowOnMouseOver:hover {
     opacity: 1;
 }
 
-.AppPaneTitle{
+.AppPaneTitle {
     display: flex;
-    height:fit-content;
+    height: fit-content;
     margin-left: 20px;
     font-size: 18px;
 }
 
-.ApplicationSelection .notify{
+.ApplicationSelection .notify {
     display: none;
 }
