--- a/src/app/modules/ApplicationSelection/style/applicationSelection.scss
+++ b/src/app/modules/ApplicationSelection/style/applicationSelection.scss
@@ -20,6 +20,11 @@
     opacity: 0;
     width: 100%;
     height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    text-align: center;
+    border-radius: 10%;
+    font-size: 15px;
+    padding: 10px;
 }
 
 .ShowOnMouseOver:hover {
@@ -29,8 +34,8 @@
 .AppPaneTitle {
     display: flex;
     height: fit-content;
-    margin-left: 20px;
     font-size: 18px;
+    justify-content: center;
 }
 
 .ApplicationSelection .notify {
