AppButtons signal their selection

--- a/src/app/core/style/applicationBar.scss
+++ b/src/app/core/style/applicationBar.scss
@@ -30,6 +30,11 @@
     opacity: 1;
 }
 
+.activeApp {
+    border-color: green;
+    opacity: 1;
+}
+
 .notify {
     display: flex;
     height: 30px;
