--- a/src/app/core/style/style.scss
+++ b/src/app/core/style/style.scss
@@ -13,26 +13,26 @@
     overflow: auto;
 }
 
+button{
+    background-color: $secondaryColour;
+}
+
 // Scrollbar
 ::-webkit-scrollbar {
     width: 10px;
-    opacity: 0.5;
 }
-
 
 /* Track */
 
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
-    opacity: 0.5;
+    background: rgba(255, 255, 255, 0.5);
 }
 
 
 /* Handle */
 
 ::-webkit-scrollbar-thumb {
-    background: #888;
-    opacity: 0.5;
+    background: rgba(135, 135, 135, 0.5);
 }
 
 
@@ -40,5 +40,4 @@
 
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
-    opacity: 1;
 }
