Added IFRame to librabry

--- a/src/app/core/style/style.scss
+++ b/src/app/core/style/style.scss
@@ -21,6 +21,12 @@ button {
     display: none;
 }
 
+.fullIframe {
+    display: flex;
+    height: 100%;
+    width: 100%;
+}
+
 // Scrollbar
 ::-webkit-scrollbar {
     width: 10px;
