Some Styling to AppSelection

--- a/src/app/modules/ApplicationSelection/style/appIcon.scss
+++ b/src/app/modules/ApplicationSelection/style/appIcon.scss
@@ -4,9 +4,14 @@
 }
 
 .Octane {
-    background-image: url(../../Example/assets/octaneIcon.png);
+    background-image: url(../../OctaneBurner/assets/octaneIcon.png);
 }
 
 .BatManager {
     background-image: url(../../Example/assets/Bat.PNG);
+}
+
+.RmDashboard{
+    background-image: url(../../RmDashboard/assets/Rm.png);
+    background-color: rgba(70,70,70,.8);
 }
