--- a/src/app/core/style/applicationBar.scss
+++ b/src/app/core/style/applicationBar.scss
@@ -18,7 +18,6 @@
     border: solid;
     display: flex;
     align-self: center;
-    margin-top: 10px;
     text-align: center;
     background-size: contain;
     cursor: pointer;
@@ -57,4 +56,25 @@
     left: 10px;
     position: relative;
     top: 10px;
+}
+
+.closeApp {
+    display: flex;
+    top: 15px;
+    right: -82px;
+    background-color: black;
+    max-height: 20px;
+    min-height: 20px;
+    min-width: 20px;
+    max-width: 20px;
+    border-radius: 50%;
+    border-color: white;
+    border: solid;
+    justify-content: center;
+    padding-top: 2px;
+    opacity: 0.5;
+}
+
+.closeApp:hover {
+    opacity: 1;
 }
