--- a/src/app/core/style/applicationBar.scss
+++ b/src/app/core/style/applicationBar.scss
@@ -73,6 +73,8 @@
     justify-content: center;
     padding-top: 2px;
     opacity: 0.5;
+    z-index: 1;
+    cursor: pointer;
 }
 
 .closeApp:hover {
