Some implimentation work on video recording

--- a/src/app/modules/ApplicationSelection/style/appIcon.scss
+++ b/src/app/modules/ApplicationSelection/style/appIcon.scss
@@ -11,7 +11,12 @@
     background-image: url(../../Example/assets/Bat.PNG);
 }
 
-.RmDashboard{
+.RmDashboard {
     background-image: url(../../RmDashboard/assets/Rm.png);
-    background-color: rgba(70,70,70,.8);
+    background-color: rgba(70, 70, 70, .8);
+}
+
+.VideoRecording {
+    background-image: url(../../VideoRecording/assets/Video.png);
+    background-color: rgba(70, 70, 70, .8);
 }
