Some Video stuff

--- a/src/app/core/style/style.scss
+++ b/src/app/core/style/style.scss
@@ -17,6 +17,10 @@ button {
     background-color: $secondaryColour;
 }
 
+video {
+    max-width: 100%;
+}
+
 .hidden {
     display: none !important;
 }
