--- a/src/app/core/style/style.scss
+++ b/src/app/core/style/style.scss
@@ -21,6 +21,10 @@ video {
     max-width: 100%;
 }
 
+select {
+    background-color: rgb(64, 64, 64);
+}
+
 .hidden {
     display: none !important;
 }
