--- a/src/app/modules/VideoRecording/style/VideoRecord.scss
+++ b/src/app/modules/VideoRecording/style/VideoRecord.scss
@@ -2,3 +2,12 @@
     height: 100%;
     border: none;
 }
+
+.sources {
+    width: inherit;
+    display: inline-flex;
+}
+
+button.sources {
+    width: fit-content;
+}
